--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -328,11 +328,187 @@
             "logos": "Logos",
             "articles": "Articles",
             "ads": "Advertisements",
+            "messages": "Customer Chat",
             "admins": "Admins",
+            "subscriptions": "Subscriptions",
             "invoices": "Invoices",
             "todayPrice": "Today's Price",
             "logout": "Logout",
             "Egypt": "Egypt"
+        },
+        "verifications": {
+            "sectionLabel": "Account Verification",
+            "title": "Account Verification Requests",
+            "detailsTitle": "Verify Account",
+            "searchPlaceholder": "Search by user name or account number",
+            "status": {
+                "pending": "Pending",
+                "approved": "Approved",
+                "rejected": "Rejected"
+            },
+            "table": {
+                "accountNumber": "Account #",
+                "submittedAt": "Submitted At",
+                "name": "Name",
+                "phone": "Phone",
+                "accountType": "Account Type",
+                "email": "Email"
+            },
+            "empty": "No verification requests match your filters.",
+            "fields": {
+                "email": "Email",
+                "phone": "Phone",
+                "accountType": "Account Type",
+                "submittedAt": "Submitted At"
+            },
+            "attachments": {
+                "front": "View Front ID",
+                "back": "View Back ID",
+                "selfie": "View Selfie"
+            },
+            "actions": {
+                "approve": "Approve",
+                "reject": "Reject"
+            },
+            "viewProfile": "View Profile",
+            "rejectModal": {
+                "title": "Rejection Reason",
+                "placeholder": "Write the rejection reason",
+                "cancel": "Cancel",
+                "submit": "Send",
+                "sending": "Sending..."
+            },
+            "errors": {
+                "fetch": "Failed to load verification requests",
+                "fetchOne": "Failed to load the verification request",
+                "notFound": "No data available for this request",
+                "approve": "Unable to approve verification",
+                "reject": "Unable to reject verification"
+            },
+            "messages": {
+                "approved": "Account verified successfully",
+                "rejected": "Verification request rejected"
+            }
+        },
+        "chat": {
+            "title": "Chat with customers",
+            "searchPlaceholder": "Search conversations...",
+            "empty": "No conversations available.",
+            "noMessagesYet": "No messages yet.",
+            "selectConversation": "Select a conversation to start chatting.",
+            "typePlaceholder": "Type your message...",
+            "unknownUser": "Unknown user",
+            "actions": {
+                "contactClient": "Contact client",
+                "send": "Send",
+                "cancel": "Cancel"
+            },
+            "messages": {
+                "initiated": "Conversation started successfully"
+            },
+            "errors": {
+                "fetchConversations": "Failed to load conversations",
+                "sendFailed": "Unable to send message",
+                "userRequired": "Please choose a client first",
+                "initiateFailed": "Unable to start a new conversation"
+            },
+            "modal": {
+                "title": "Contact the client",
+                "user": "Choose client",
+                "userPlaceholder": "Type a name to search",
+                "subject": "Subject",
+                "message": "Message",
+                "sending": "Sending..."
+            }
+        },
+        "todayPrices": {
+            "sectionLabel": "Daily Prices",
+            "title": "Today's Prices",
+            "count": "Records: {{count}}",
+            "export": "Export",
+            "categories": {
+                "sheep": "Sheep",
+                "cows": "Cows",
+                "camels": "Camels"
+            },
+            "table": {
+                "accountNumber": "Account #",
+                "predictionDate": "Prediction Date",
+                "name": "Name",
+                "accountType": "Account Type",
+                "expected": "Expected Price",
+                "current": "Current Price"
+            },
+            "empty": "No price entries available for this category."
+        },
+        "advertisements": {
+            "pageTitle": "Advertisements Manager",
+            "subtitle": "Add or remove hero and slider advertisements.",
+            "heroTitle": "Add Hero Advertisement",
+            "sliderTitle": "Add Slider Advertisements",
+            "emptyHeroSection": "No hero ads yet.",
+            "emptySliderSection": "No slider ads yet.",
+            "actions": {
+                "addHero": "Add hero ad",
+                "addSlider": "Add slider ad",
+                "confirmDelete": "Are you sure you want to delete this advertisement? This action cannot be undone."
+            },
+            "modal": {
+                "title": "Create new advertisement",
+                "imageLabel": "Advertisement image",
+                "orderLabel": "Display order",
+                "cancel": "Cancel",
+                "save": "Save",
+                "saving": "Saving..."
+            },
+            "errors": {
+                "fetch": "Failed to load advertisements.",
+                "upload": "Unable to upload the advertisement, please try again.",
+                "delete": "Unable to delete the advertisement.",
+                "fileRequired": "Please select an image first."
+            },
+            "messages": {
+                "created": "Advertisement created successfully",
+                "deleted": "Advertisement deleted successfully"
+            }
+        },
+        "packages": {
+            "title": "Packages Pricing",
+            "currency": "EGP",
+            "empty": "No packages available in this category.",
+            "actions": {
+                "add": "Add new package",
+                "edit": "Edit",
+                "delete": "Delete",
+                "cancel": "Cancel",
+                "save": "Save",
+                "update": "Update"
+            },
+            "fields": {
+                "category": "Package category",
+                "choose": "Choose category",
+                "name": "Package name",
+                "namePlaceholder": "Enter package name",
+                "description": "Package description",
+                "descriptionPlaceholder": "Add a short description",
+                "price": "Package price"
+            },
+            "errors": {
+                "fetchCategories": "Failed to load package categories",
+                "fetchPackages": "Failed to load packages",
+                "required": "Please fill all required fields",
+                "saveFailed": "Unable to save package, try again",
+                "deleteFailed": "Unable to delete package"
+            },
+            "messages": {
+                "created": "Package created successfully",
+                "updated": "Package updated successfully",
+                "deleted": "Package deleted successfully"
+            },
+            "delete": {
+                "confirmTitle": "Are you sure you want to delete this package?",
+                "confirmMessage": "This action is irreversible and will delete the package."
+            }
         },
         "additions": {
             "title": "Additions",
@@ -480,6 +656,68 @@
                 "deleteError": "Error deleting product",
                 "updateError": "Error updating status",
                 "exportSuccess": "Exported successfully"
+            }
+        },
+        "articles": {
+            "title": "Articles",
+            "addArticle": "Add Article",
+            "editArticle": "Edit Article",
+            "delete": "Delete",
+            "cancel": "Cancel",
+            "send": "Send",
+            "addImage": "Add Image",
+            "articleTitle": "Article Title",
+            "articleTitlePlaceholder": "Enter article title",
+            "articleContent": "Article",
+            "articleContentPlaceholder": "Enter article content",
+            "noArticles": "No articles found",
+            "fetchError": "Failed to load articles",
+            "addSuccess": "Article added successfully",
+            "addError": "Error adding article",
+            "updateSuccess": "Article updated successfully",
+            "updateError": "Error updating article",
+            "deleteSuccess": "Article deleted successfully",
+            "deleteError": "Error deleting article",
+            "deleteConfirmTitle": "Are you sure you want to delete the article?",
+            "deleteConfirmMessage": "Are you sure you want to delete this article? This action cannot be undone.",
+            "fillAllFields": "Please fill all required fields"
+        },
+        "packages": {
+            "title": "Packages",
+            "currency": "EGP",
+            "empty": "No packages available in this category.",
+            "actions": {
+                "add": "Add Package",
+                "edit": "Edit",
+                "update": "Update",
+                "save": "Save",
+                "cancel": "Cancel",
+                "delete": "Delete Package"
+            },
+            "fields": {
+                "category": "Package Category",
+                "choose": "Choose category",
+                "name": "Package Name",
+                "namePlaceholder": "Enter package name",
+                "description": "Package Description",
+                "descriptionPlaceholder": "Write a short description for the package",
+                "price": "Package Price"
+            },
+            "delete": {
+                "confirmTitle": "Are you sure you want to delete this package?",
+                "confirmMessage": "Deleting the package will remove it permanently from the system."
+            },
+            "errors": {
+                "fetchCategories": "Failed to load package categories",
+                "fetchPackages": "Failed to load packages",
+                "required": "Please fill all required fields",
+                "saveFailed": "Unable to save package",
+                "deleteFailed": "Unable to delete package"
+            },
+            "messages": {
+                "created": "Package added successfully",
+                "updated": "Package updated successfully",
+                "deleted": "Package deleted successfully"
             }
         }
     }
