--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -459,8 +459,8 @@
         "predictionDate": "تاريخ تسجيل التوقع",
         "name": "الاسم",
         "accountType": "نوع الحساب",
-        "expected": "السعر المتوقع",
-        "current": "السعر الحالي"
+        "netPrice": "السعر المتوقع",
+        "standingPrice": "السعر الحالي"
       },
       "empty": "لا يوجد بيانات في هذا القسم حالياً."
     },
@@ -482,18 +482,28 @@
         "orderLabel": "ترتيب العرض",
         "cancel": "الغاء",
         "save": "حفظ",
+        "delete": "حذف",
+        "uploadText": "اضغط لرفع الصورة",
         "saving": "جاري الحفظ..."
       },
+      "deleteModal": {
+        "title": "حذف الإعلان",
+        "message": "هل أنت متأكد من حذف هذا الإعلان؟ لا يمكن التراجع عن هذا الإجراء.",
+        "cancel": "إلغاء",
+        "confirm": "حذف"
+      },
       "errors": {
-        "fetch": "فشل في تحميل الاعلانات",
-        "upload": "تعذر رفع الاعلان، حاول مرة أخرى.",
-        "delete": "تعذر حذف الاعلان، حاول مرة أخرى.",
-        "fileRequired": "يرجى اختيار صورة الاعلان أولاً."
+        "fetch": "فشل تحميل الإعلانات",
+        "fileRequired": "الرجاء اختيار صورة",
+        "upload": "فشل رفع الإعلان",
+        "delete": "فشل حذف الإعلان",
+        "maxImages": "الحد الأقصى 3 صور لكل قسم"
       },
       "messages": {
-        "created": "تم اضافة الاعلان بنجاح",
-        "deleted": "تم حذف الاعلان بنجاح"
-      }
+        "created": "تم إنشاء الإعلان بنجاح",
+        "deleted": "تم حذف الإعلان بنجاح"
+      },
+      "imagesCount": "عدد الصور"
     },
     "packages": {
       "title": "تسعير الباقات",
@@ -704,6 +714,28 @@
       "deleteConfirmTitle": "هل أنت متأكد من حذف المقال؟",
       "deleteConfirmMessage": "هل أنت متأكد من حذف هذا المقال؟ لا يمكن التراجع عن هذا الإجراء.",
       "fillAllFields": "يرجى ملء جميع الحقول المطلوبة"
+    },
+    "reports": {
+      "title": "الابلاغات - تواصل معانا",
+      "export": "تصدير",
+      "noReports": "لا توجد تقارير",
+      "filters": {
+        "all": "البلاغات",
+        "report": "بلاغ",
+        "complaint": "شكوي",
+        "request": "طلب",
+        "subscription": "مشكلة في الاشتراكات",
+        "other": "سبب اخر"
+      },
+      "table": {
+        "requestNumber": "رقم الطلب",
+        "requestType": "نوع الطلب",
+        "submissionDate": "تاريخ تقديم الطلب",
+        "requester": "مقدم الطلب",
+        "adNumber": "رقم الاعلان",
+        "traderName": "اسم التجار",
+        "phoneNumber": "رقم التليفون"
+      }
     },
     "packages": {
       "title": "تسعير الباقات",
