--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,11 +8,11 @@
     "notification": "notifications",
     "viewProfile": "view profile",
     "favorite ads": "favorite ads",
-    "subscriptions": "subscriptions",
+    "subscriptions": "packages",
     "contact us": "contact us",
     "share the app": "share the app",
     "my ads": "my ads",
-    "subscriptions and invoices": "subscriptions and invoices",
+    "subscriptions and invoices": "packages and invoices",
     "today's meat price": "today's meat price",
     "about us": "about us",
     "privacy, terms, and conditions": "privacy, terms, and conditions",
@@ -123,7 +123,7 @@
             "country": [
                 "Egypt",
                 "Saudi Arabia",
-                "Bahrain"
+                "Kuwait"
             ]
         },
         "copyRight": "All rights reserved to Animal Production Market (APM) 2025",
@@ -209,6 +209,8 @@
         "uploadPersonalPhoto": "Upload Personal Photo",
         "submitVerification": "Submit Verification Request",
         "verificationInfo": "To verify your account for faster selling and increased credibility, please upload your ID card photo, personal photo, mobile number, and email.",
+        "accountVerified": "Account Verified",
+        "verificationComplete": "Your account has been successfully verified",
         "confirmPassword": "Confirm Password",
         "confirmPasswordPlaceholder": "Confirm new password",
         "passwordPlaceholder": "Leave blank if you don't want to change password",
@@ -239,16 +241,51 @@
     "messages": {
         "title": "Messages",
         "noMessages": "No messages at the moment",
-        "startConversation": "Click on products to start a conversation with sellers",
-        "searchPlaceholder": "Search messages...",
+        "searchPlaceholder": "Search ...",
         "tabs": {
             "all": "All",
             "buy": "Buy",
             "sell": "Sell"
         },
         "typePlaceholder": "Type your message...",
-        "startChatNow": "Start the conversation now",
-        "selectChat": "Select a chat to view"
+        "startChatNow": "Send your first message now",
+        "selectChat": "Select a chat to view",
+        "back": "Back",
+        "online": "Online",
+        "chatOptions": "Chat Options",
+        "rateSeller": "Rate Seller",
+        "loading": "Loading...",
+        "writeMessage": "Write message",
+        "sendMessage": "Send message",
+        "noResults": "No results found",
+        "tryAnotherSearch": "Try searching with different keywords",
+        "allChats": "All your conversations",
+        "conversationsCount": "conversations",
+        "yesterday": "Yesterday",
+        "daysAgo": "days ago",
+        "noUser": "User",
+        "selectChatToStart": "Select a conversation from the sidebar to view messages and chat with them",
+        "errorLoadingConversations": "Error loading conversations",
+        "errorLoadingMessages": "Error loading messages",
+        "errorSendingMessage": "Error sending message",
+        "errorLoadingUserData": "Error loading user data",
+        "rateSellerTitle": "Rate Seller",
+        "editReview": "Edit Review",
+        "honestyRating": "Honesty Rating",
+        "easyToDealRating": "Easy to Deal Rating",
+        "commentOptional": "Comment (Optional)",
+        "shareExperience": "Share your experience with the seller...",
+        "maxCharacters": "Max 1000 characters",
+        "cancel": "Cancel",
+        "submitReview": "Submit Review",
+        "updateReview": "Update Review",
+        "submitting": "Submitting...",
+        "reviewSubmitted": "Review submitted successfully!",
+        "selectBothRatings": "Please select both ratings",
+        "commentTooLong": "Comment is too long (max 1000 characters)",
+        "errorSubmittingReview": "Error submitting review",
+        "existingReviewNote": "You have an existing review for this seller. You can update it here.",
+        "note": "Note:"
     },
     "notifications": {
         "title": "Notifications",
